[package]
name = "rematch"
version = "0.1.0"
authors = ["Jakub Jaroszewski <jakub.jaroszewski@gmail.com>"]
description = "A procedural macro to generate simple FromStr implementation based on Regular Expression matching"
repository = "https://github.com/pierd/rematch"
keywords = ["parsing"]
categories = ["parsing"]
readme = "../README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
anyhow = "1.0.57"
lazy_static = "1.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.39"
quote = "1.0.18"
regex = "1.5.6"
syn = { version = "1.0.96", features = ["full"] }
